# dc-video-mcp

./: .gitignore  LICENSE  README.md  README.original.md  pyproject.toml
scripts/: blog_md_to_pdf.py
src/dc_video_mcp/: __init__.py  config.py  exporter.py  indexer.py  languages.py  models.py  server.py  storage.py  styles.py
tests/: test_config.py  test_exporter.py  test_storage.py  test_styles.py
